--- a/src/static/css/admin.css
+++ b/src/static/css/admin.css
@@ -9,7 +9,6 @@
 
   --constraint-key: #1E61FF;
   --constraint-serial: #FF6D1F;
-  --constraint-constant: #DC0000;
   --constraint-optional: #41A67E;
 }
 
@@ -26,7 +25,7 @@ body {
   background-color: var(--bg1);
 }
 
-code { font-family: monospace; }
+code, pre { font-family: monospace; }
 
 input[type="submit"], button {
   padding: 0.25em 0.5em;
@@ -67,7 +66,7 @@ h1 {
   font-weight: normal;
 }
 
-.token { width: 100%; }
+#token { width: 100%; }
 
 main {
   display: flex;
@@ -91,10 +90,11 @@ x-table {
     display: flex;
     gap: 0.5em;
 
-    & > code {
+    & > pre {
       display: block;
-      padding: 0.5em;
+      padding: 0.5em; margin: 0; min-width: 0;
       background-color: var(--bg2);
+      text-wrap: wrap; word-wrap: break-word;
       flex-grow: 1;
 
       &:empty { display: none; }
@@ -105,7 +105,6 @@ x-table {
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    max-width: min(36em, 100%);
 
     & > div {
       display: flex;
@@ -139,7 +138,6 @@ x-table {
       font-size: 0.75em;
 
       &.key { background-color: var(--constraint-key); }
-      &.constant { background-color: var(--constraint-constant); }
       &.serial { background-color: var(--constraint-serial); }
       &.optional { background-color: var(--constraint-optional); }
     }
@@ -159,3 +157,13 @@ x-table {
     }
   }
 }
+
+@media (max-width: 50em) {
+  & .query { flex-direction: column; }
+}
+
+x-table.get .field:not(:has(.key)) { display: none; }
+
+x-table.delete .field:not(:has(.key)) { display: none; }
+
+x-table.create .field:has(.serial) { display: none; }
